--- a/cdmp/index.html
+++ b/cdmp/index.html
@@ -166,7 +166,7 @@
     <h1>CDMP — Controle de Parcelas</h1>
     <div class="sub">BAP Administradora de Condomínios · Cobrança Extrajudicial</div>
   </div>
-  <div class="updated">Atualizado: 19/02/2026 09:31</div>
+  <div class="updated">Atualizado: 19/02/2026 09:40</div>
 </div>
 
 <div class="stats">
@@ -429,7 +429,7 @@
   <div class="card-body">
     <div class="parcelas-row">
       <span class="row-label">Parcelas</span>
-      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 01/11/2025">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 01/12/2025">2</span><span class="parc-badge p-pago" title="Parcela 3 — Pago em 01/01/2025">3</span><span class="parc-badge p-vencido" title="Parcela 4 — VENCIDO em 13/02/2025">4</span><span class="parc-badge p-vencido" title="Parcela 5 — VENCIDO em 01/03/2025">5</span><span class="parc-badge p-vencido" title="Parcela 6 — VENCIDO em 01/04/2025">6</span><span class="parc-badge p-vencido" title="Parcela 7 — VENCIDO em 01/05/2025">7</span><span class="parc-badge p-vencido" title="Parcela 8 — VENCIDO em 01/06/2025">8</span></div>
+      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 01/11/2025">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 01/12/2025">2</span><span class="parc-badge p-pago" title="Parcela 3 — Pago em 01/01/2026">3</span><span class="parc-badge p-vencido" title="Parcela 4 — VENCIDO em 13/02/2026">4</span><span class="parc-badge p-pendente" title="Parcela 5 — Pendente · Vcto: 01/03/2026">5</span><span class="parc-badge p-pendente" title="Parcela 6 — Pendente · Vcto: 01/04/2026">6</span><span class="parc-badge p-pendente" title="Parcela 7 — Pendente · Vcto: 01/05/2026">7</span><span class="parc-badge p-pendente" title="Parcela 8 — Pendente · Vcto: 01/06/2026">8</span></div>
       <span class="prog-label">3/8</span>
     </div>
     <div class="progress-bar"><div class="progress-fill prog-low" style="width:37%"></div></div>
@@ -460,7 +460,7 @@
   <div class="analytics-title" style="margin-top:14px">Parcelas (8 registros)</div>
   <table class="an-table">
     <thead><tr><th>Nº</th><th>Vencimento</th><th>Valor</th><th>Status</th></tr></thead>
-    <tbody><tr><td class="tc">#1</td><td>01/11/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pago">✓ Pago</span></td></tr><tr><td class="tc">#2</td><td>01/12/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pago">✓ Pago</span></td></tr><tr><td class="tc">#3</td><td>01/01/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pago">✓ Pago</span></td></tr><tr><td class="tc">#4</td><td>13/02/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-vencido">! Vencido (371d)</span></td></tr><tr><td class="tc">#5</td><td>01/03/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-vencido">! Vencido (355d)</span></td></tr><tr><td class="tc">#6</td><td>01/04/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-vencido">! Vencido (324d)</span></td></tr><tr><td class="tc">#7</td><td>01/05/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-vencido">! Vencido (294d)</span></td></tr><tr><td class="tc">#8</td><td>01/06/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-vencido">! Vencido (263d)</span></td></tr></tbody>
+    <tbody><tr><td class="tc">#1</td><td>01/11/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pago">✓ Pago</span></td></tr><tr><td class="tc">#2</td><td>01/12/2025</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pago">✓ Pago</span></td></tr><tr><td class="tc">#3</td><td>01/01/2026</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pago">✓ Pago</span></td></tr><tr><td class="tc">#4</td><td>13/02/2026</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-vencido">! Vencido (6d)</span></td></tr><tr><td class="tc">#5</td><td>01/03/2026</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#6</td><td>01/04/2026</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#7</td><td>01/05/2026</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#8</td><td>01/06/2026</td><td class="tr mono">R$ 1.194,66</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr></tbody>
   </table>
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
