fix: filtrar boletos abertos apenas do acordo atual, excluir boletos regulares

--- a/cdmp/index.html
+++ b/cdmp/index.html
@@ -166,7 +166,7 @@
     <h1>CDMP — Controle de Parcelas</h1>
     <div class="sub">BAP Administradora de Condomínios · Cobrança Extrajudicial</div>
   </div>
-  <div class="updated">Atualizado: 19/02/2026 10:22</div>
+  <div class="updated">Atualizado: 19/02/2026 10:42</div>
 </div>
 
 <div class="stats">
@@ -211,7 +211,7 @@
     <div class="progress-bar"><div class="progress-fill prog-ok" style="width:83%"></div></div>
     <div class="boletos-row">
       <span class="row-label">Boletos abertos</span>
-      <div class="boletos-wrap"><span class="boleto-tag vcto-vencido">Vcto 08/02/2026 · R$ 809,38</span><span class="boleto-tag vcto-vencido">Vcto 08/08/2025 · R$ 548,38</span></div>
+      <div class="boletos-wrap"><span class="boleto-none">Sem boletos em aberto</span></div>
     </div>
   </div>
   <div class="card-footer">
@@ -241,7 +241,7 @@
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
     <thead><tr><th>Vencimento</th><th>Valor</th><th>Histórico</th><th>Status</th></tr></thead>
-    <tbody><tr><td>08/08/2025</td><td class="tr mono">R$ 419,21</td><td class="hist">CONDOMÍNIO 08/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/08/2025</td><td class="tr mono">R$ -1,26</td><td class="hist">FUNDO DE RESERVA 08/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/08/2025</td><td class="tr mono">R$ 133,14</td><td class="hist">ÁGUA E ESGOTO VCTO 01/08/2025 06/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/08/2025</td><td class="tr mono">R$ -0,32</td><td class="hist">SEGURO DO CONDOMÍNIO - PC: 2/6</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/08/2025</td><td class="tr mono">R$ -2,39</td><td class="hist">FÉRIAS DO FUNCIONÁRIO PAULO HENRIQUE - PC: 1/1</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/02/2026</td><td class="tr mono">R$ 419,21</td><td class="hist">CONDOMÍNIO 02/2026</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/02/2026</td><td class="tr mono">R$ 41,92</td><td class="hist">FUNDO DE RESERVA 02/2026</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/02/2026</td><td class="tr mono">R$ 200,73</td><td class="hist">ÁGUA E ESGOTO VCTO 02/02/2026 12/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/02/2026</td><td class="tr mono">R$ 137,14</td><td class="hist">FÉRIAS EDELZIO</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>08/02/2026</td><td class="tr mono">R$ 10,38</td><td class="hist">SEGURO DO CONDOMÍNIO - PC: 1/6</td><td><span class="st-badge st-vencido">Vencido</span></td></tr></tbody>
+    <tbody><tr><td colspan="4" class="empty-row">Nenhum boleto em aberto encontrado na API</td></tr></tbody>
   </table>
 </div></div>
 </div>
@@ -883,7 +883,7 @@
     <div class="progress-bar"><div class="progress-fill prog-ok" style="width:50%"></div></div>
     <div class="boletos-row">
       <span class="row-label">Boletos abertos</span>
-      <div class="boletos-wrap"><span class="boleto-tag vcto-vencido">Vcto 10/01/2025 · R$ 4.040,00</span><span class="boleto-tag vcto-vencido">Vcto 10/10/2024 · R$ 2.568,37</span></div>
+      <div class="boletos-wrap"><span class="boleto-none">Sem boletos em aberto</span></div>
     </div>
   </div>
   <div class="card-footer">
@@ -913,7 +913,7 @@
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
     <thead><tr><th>Vencimento</th><th>Valor</th><th>Histórico</th><th>Status</th></tr></thead>
-    <tbody><tr><td>10/10/2024</td><td class="tr mono">R$ -19,29</td><td class="hist">13 SALARIO  - Ref 10/2024 </td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>10/10/2024</td><td class="tr mono">R$ -146,98</td><td class="hist">FUNDO DE INDENIZACAO  - Ref 10/2024 </td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>10/10/2024</td><td class="tr mono">R$ 2.787,00</td><td class="hist">CONDOMINIO  - Ref 10/2024 </td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>10/10/2024</td><td class="tr mono">R$ -52,36</td><td class="hist">FUNDO DE RESERVA  - Ref 10/2024 </td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>10/01/2025</td><td class="tr mono">R$ 2.850,00</td><td class="hist">CONDOMÍNIO 01/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>10/01/2025</td><td class="tr mono">R$ 285,00</td><td class="hist">FUNDO DE RESERVA 01/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>10/01/2025</td><td class="tr mono">R$ 105,00</td><td class="hist">13 SALÁRIO 01/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr><tr><td>10/01/2025</td><td class="tr mono">R$ 800,00</td><td class="hist">FUNDO DE INDENIZAÇÃO 01/2025</td><td><span class="st-badge st-vencido">Vencido</span></td></tr></tbody>
+    <tbody><tr><td colspan="4" class="empty-row">Nenhum boleto em aberto encontrado na API</td></tr></tbody>
   </table>
 </div></div>
 </div>
@@ -989,7 +989,7 @@
   <div class="card-body">
     <div class="parcelas-row">
       <span class="row-label">Parcelas</span>
-      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 10/01/2025">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 10/02/2025">2</span><span class="parc-badge p-pago" title="Parcela 3 — Pago em 05/03/2025">3</span><span class="parc-badge p-pago" title="Parcela 4 — Pago em 05/05/2025">4</span><span class="parc-badge p-vencido" title="Parcela 5 — VENCIDO em 05/06/2025">5</span></div>
+      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 10/01/2025">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 10/02/2025">2</span><span class="parc-badge p-pago" title="Parcela 3 — Pago em 05/03/2025">3</span><span class="parc-badge p-pago" title="Parcela 4 — Pago em 05/04/2025">4</span><span class="parc-badge p-vencido" title="Parcela 5 — VENCIDO em 05/05/2025">5</span></div>
       <span class="prog-label">4/5</span>
     </div>
     <div class="progress-bar"><div class="progress-fill prog-ok" style="width:80%"></div></div>
@@ -1001,7 +1001,7 @@
   <div class="card-footer">
     <span>Total acordo: <strong>R$ 16.091,33</strong></span>
     <span>Valor/parcela: <strong>R$ 3.218,27</strong></span>
-    <span>Período: 10/01/2025 a 05/06/2025</span>
+    <span>Período: 10/01/2025 a 05/05/2025</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
   <div class="card-analytics">
@@ -1020,7 +1020,7 @@
   <div class="analytics-title" style="margin-top:14px">Parcelas (5 registros)</div>
   <table class="an-table">
     <thead><tr><th>Nº</th><th>Vencimento (API)</th><th>Valor</th><th>Status</th></tr></thead>
-    <tbody><tr><td class="tc">#1</td><td>10/01/2025</td><td class="tr mono">R$ 1.943,93</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 20/10/2025</span></td></tr><tr><td class="tc">#2</td><td>10/02/2025</td><td class="tr mono">R$ 4.715,80</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 18/11/2025</span></td></tr><tr><td class="tc">#3</td><td>05/03/2025</td><td class="tr mono">R$ 4.715,80</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 23/12/2025</span></td></tr><tr><td class="tc">#4</td><td>05/05/2025</td><td class="tr mono">R$ 4.715,80</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 20/01/2026</span></td></tr><tr><td class="tc">#5</td><td>05/06/2025</td><td class="tr mono">R$ 3.218,27</td><td><span class="st-badge st-vencido">! Vencido (259d)</span></td></tr></tbody>
+    <tbody><tr><td class="tc">#1</td><td>10/01/2025</td><td class="tr mono">R$ 1.943,93</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 20/10/2025</span></td></tr><tr><td class="tc">#2</td><td>10/02/2025</td><td class="tr mono">R$ 4.715,80</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 18/11/2025</span></td></tr><tr><td class="tc">#3</td><td>05/03/2025</td><td class="tr mono">R$ 4.715,80</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 23/12/2025</span></td></tr><tr><td class="tc">#4</td><td>05/04/2025</td><td class="tr mono">R$ 4.715,80</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 20/01/2026</span></td></tr><tr><td class="tc">#5</td><td>05/05/2025</td><td class="tr mono">R$ 3.218,27</td><td><span class="st-badge st-vencido">! Vencido (290d)</span></td></tr></tbody>
   </table>
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
@@ -1437,7 +1437,7 @@
   <div class="card-body">
     <div class="parcelas-row">
       <span class="row-label">Parcelas</span>
-      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 05/10/2024">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 05/11/2024">2</span><span class="parc-badge p-pago" title="Parcela 3 — Pago em 05/02/2025">3</span></div>
+      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 05/10/2024">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 05/10/2024">2</span><span class="parc-badge p-pago" title="Parcela 3 — Pago em 05/04/2025">3</span></div>
       <span class="prog-label">3/3</span>
     </div>
     <div class="progress-bar"><div class="progress-fill prog-done" style="width:100%"></div></div>
@@ -1449,7 +1449,7 @@
   <div class="card-footer">
     <span>Total acordo: <strong>R$ 10.283,59</strong></span>
     <span>Valor/parcela: <strong>R$ 3.427,86</strong></span>
-    <span>Período: 05/10/2024 a 05/02/2025</span>
+    <span>Período: 05/10/2024 a 05/04/2025</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
   <div class="card-analytics">
@@ -1468,7 +1468,7 @@
   <div class="analytics-title" style="margin-top:14px">Parcelas (3 registros)</div>
   <table class="an-table">
     <thead><tr><th>Nº</th><th>Vencimento (API)</th><th>Valor</th><th>Status</th></tr></thead>
-    <tbody><tr><td class="tc">#1</td><td>05/10/2024</td><td class="tr mono">R$ 2.590,97</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 25/11/2025</span></td></tr><tr><td class="tc">#2</td><td>05/11/2024</td><td class="tr mono">R$ 3.846,31</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 23/12/2025</span></td></tr><tr><td class="tc">#3</td><td>05/02/2025</td><td class="tr mono">R$ 3.846,31</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 06/02/2026</span></td></tr></tbody>
+    <tbody><tr><td class="tc">#1</td><td>05/10/2024</td><td class="tr mono">R$ 2.590,97</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 25/11/2025</span></td></tr><tr><td class="tc">#2</td><td>05/10/2024</td><td class="tr mono">R$ 3.846,31</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 23/12/2025</span></td></tr><tr><td class="tc">#3</td><td>05/04/2025</td><td class="tr mono">R$ 3.846,31</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 06/02/2026</span></td></tr></tbody>
   </table>
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
