fix: normaliza GIULIA → GIULIA NUNES no filtro de responsável

--- a/cdmp/index.html
+++ b/cdmp/index.html
@@ -180,7 +180,7 @@
     <h1>CDMP — Controle de Parcelas</h1>
     <div class="sub">BAP Administradora de Condomínios · Cobrança Extrajudicial</div>
   </div>
-  <div class="updated">Atualizado: 20/02/2026 05:10</div>
+  <div class="updated">Atualizado: 20/02/2026 05:14</div>
 </div>
 
 <div class="stats">
@@ -199,8 +199,7 @@
   <button class="filter-btn" onclick="setFilter('card-ok',this)">Em Aberto</button>
   <button class="filter-btn" onclick="setFilter('card-juridico',this)">⚖ Jurídico</button>
   <button class="filter-btn" onclick="setFilter('card-done',this)">✓ Concluídos</button>
-  <span class="filter-sep">|</span> 👤 <button class="filter-btn resp-btn" onclick="setResp('GIULIA',this)">GIULIA</button>
-  <button class="filter-btn resp-btn" onclick="setResp('GIULIA NUNES',this)">GIULIA NUNES</button>
+  <span class="filter-sep">|</span> 👤 <button class="filter-btn resp-btn" onclick="setResp('GIULIA NUNES',this)">GIULIA NUNES</button>
   <button class="filter-btn resp-btn" onclick="setResp('KAROLINY',this)">KAROLINY</button>
   
 </div>
@@ -823,7 +822,7 @@
   </table>
 </div></div>
 </div>
-<div class="card card-done" data-emp="0519 - SPAZIO DEL MARE II" data-status="card-done" data-resp="giulia">
+<div class="card card-done" data-emp="0519 - SPAZIO DEL MARE II" data-status="card-done" data-resp="giulia nunes">
   <div class="card-header clickable" onclick="toggleCard(this)">
     <div class="card-title">
       <span class="cd-badge">0519</span>
@@ -832,7 +831,7 @@
     </div>
     <div class="card-meta">
       <span class="acordo-num">Acordo #12301</span>
-      <span class="resp-badge">GIULIA</span>
+      <span class="resp-badge">GIULIA NUNES</span>
       <span class="expand-icon">▼</span>
     </div>
   </div>
