--- a/cdmp/index.html
+++ b/cdmp/index.html
@@ -69,6 +69,12 @@
   .resp-badge { font-size: 11px; color: var(--muted); background: var(--surface); padding: 2px 8px; border-radius: 4px; border: 1px solid var(--border); }
   .filter-sep { color: var(--border); font-size: 16px; margin: 0 4px; user-select: none; }
   .resp-btn.active { border-color: #7c3aed; color: #7c3aed; background: rgba(124,58,237,.08); font-weight: 600; }
+  /* Update banner */
+  .update-banner { margin: 0; background: #fffbeb; border-left: 4px solid #f59e0b; border-bottom: 1px solid #fde68a; padding: 10px 20px 12px; }
+  .update-header { display: flex; justify-content: space-between; align-items: center; font-weight: 600; font-size: 13px; color: #92400e; margin-bottom: 6px; }
+  .update-close { background: none; border: none; cursor: pointer; color: #92400e; font-size: 16px; padding: 0 4px; line-height: 1; }
+  .update-list { margin: 0; padding-left: 18px; }
+  .update-list li { font-size: 13px; color: #1a2d4a; padding: 2px 0; }
 
   .card-body { padding: 12px 16px; display: flex; flex-direction: column; gap: 9px; }
   .row-label { font-size: 10px; color: var(--muted); text-transform: uppercase; letter-spacing: .6px; font-weight: 600; min-width: 100px; }
@@ -180,7 +186,7 @@
     <h1>CDMP — Controle de Parcelas</h1>
     <div class="sub">BAP Administradora de Condomínios · Cobrança Extrajudicial</div>
   </div>
-  <div class="updated">Atualizado: 20/02/2026 05:14</div>
+  <div class="updated">Atualizado: 20/02/2026 05:54</div>
 </div>
 
 <div class="stats">
@@ -191,6 +197,8 @@
   <div class="stat purple"><div class="n">0</div><div class="l">Jurídico</div></div>
   <div class="stat"><div class="n">R$ 87,735</div><div class="l">Valor Total</div></div>
 </div>
+
+
 
 <div class="filters">
   <input class="search-box" type="text" id="search" placeholder="Buscar condomínio ou unidade..." onkeyup="filterCards()">
