dash: CDMP aprovado para produção (25/02/2026)

--- a/crons/index.html
+++ b/crons/index.html
@@ -84,14 +84,14 @@ button:hover{background:#1d4ed8}
 
 <div class="wrap" id="content" style="display:none">
   <h1>🤖 CRONs BAP — Painel de Atividades</h1>
-  <div class="sub">Atualizado: 24/02/2026 · Timezone: America/New_York · 11 crons ativos</div>
+  <div class="sub">Atualizado: 25/02/2026 · Timezone: America/New_York · 11 crons ativos</div>
 
   <!-- KPIs -->
   <div class="card">
     <div class="card-title">📊 Status Geral</div>
     <div class="grid4">
-      <div class="kpi"><b class="ok">6</b><small>✅ OK / PROD</small></div>
-      <div class="kpi"><b class="warn">1</b><small>⚠️ Atenção</small></div>
+      <div class="kpi"><b class="ok">7</b><small>✅ OK / PROD</small></div>
+      <div class="kpi"><b class="ok">0</b><small>⚠️ Atenção</small></div>
       <div class="kpi"><b class="info">4</b><small>⏳ Nunca rodou</small></div>
       <div class="kpi"><b style="color:#a78bfa">4</b><small>📁 Categorias</small></div>
     </div>
@@ -295,14 +295,14 @@ button:hover{background:#1d4ed8}
             <div class="cron-name">📋 CDMP — Relatório Semanal</div>
             <div class="cron-id">42a093e4</div>
           </div>
-          <span class="badge b-warn">⚠️ WARN</span>
+          <span class="badge b-ok">✅ PROD</span>
         </div>
         <div class="cron-desc">Classifica moradores por dias sem contato: 🔴 CRÍTICO (15+d), 🟡 ATENÇÃO (10-14d), 🟢 NORMAL (&lt;10d). Gera PDF e envia.</div>
         <div class="cron-meta">
           <span class="tag sched">⏰ Segunda 17h ET</span>
           <span class="tag dest">📧 Herb, Steph, Pedro, Rafael</span>
           <span class="tag prox">▶ 02/03</span>
-          <span class="tag alert">⚠️ Dry-run antes de 02/03</span>
+          <span class="tag ok">✅ Em produção (dry-run 25/02)</span>
         </div>
       </div>
 
