fix: fallback ac_num por empreendimento — corrige Jardim Botafogo 12984→11815 (25/02/2026)

--- a/cdmp/index.html
+++ b/cdmp/index.html
@@ -223,7 +223,7 @@
   </div>
   <div style="display:flex;align-items:center;gap:12px">
     <button class="btn-extrato" onclick="document.getElementById('extrato-overlay').classList.add('open')">📋 Extrato de Alterações</button>
-    <div class="updated">Atualizado: 25/02/2026 14:53</div>
+    <div class="updated">Atualizado: 25/02/2026 15:07</div>
   </div>
 </div>
 
@@ -234,7 +234,7 @@
   <div class="stat yellow"><div class="n">12</div><div class="l">Em Aberto</div></div>
   <div class="stat red"><div class="n">2</div><div class="l">Vencidos</div></div>
   <div class="stat purple"><div class="n">0</div><div class="l">Jurídico</div></div>
-  <div class="stat"><div class="n">R$ 69,719</div><div class="l">Valor Total</div></div>
+  <div class="stat"><div class="n">R$ 72,703</div><div class="l">Valor Total</div></div>
 </div>
 
 
@@ -338,7 +338,7 @@
   </div>
   <div class="card-footer">
     <span>Total acordo: <strong>R$ 2.994,18</strong></span>
-    <span>Valor/parcela: <strong>R$ 748,55</strong></span>
+    <span>Valor/parcela: <strong>R$ 748,54</strong></span>
     <span>Período: 10/10/2025 a 13/01/2026</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
@@ -349,8 +349,8 @@
       <div class="analytics-title">Resumo Financeiro</div>
       <div class="fin-grid">
         <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">R$ 2.994,18</span></div>
-        <div class="fin-item"><span class="fin-label">Pago (4 parcelas)</span><span class="fin-val green">R$ 2.994,20</span></div>
-        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val green">R$ 0,00</span></div>
+        <div class="fin-item"><span class="fin-label">Pago (4 parcelas)</span><span class="fin-val green">R$ 2.994,16</span></div>
+        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val red">R$ 0,02</span></div>
         <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">100%</span></div>
       </div>
     </div>
@@ -538,7 +538,7 @@
   </table>
 </div></div>
 </div>
-<div class="card card-ok" data-emp="0383 - JARDIM BOTAFOGO" data-status="card-ok" data-resp="giulia nunes" data-tipo="acordo_parcelado">
+<div class="card card-done" data-emp="0383 - JARDIM BOTAFOGO" data-status="card-done" data-resp="giulia nunes" data-tipo="acordo_parcelado">
   <div class="card-header clickable" onclick="toggleCard(this)">
     <div class="card-title">
       <span class="cd-badge">0383</span>
@@ -547,7 +547,7 @@
       <span class="tipo-badge tipo-parcelado">📋 Acordo Parcelado</span>
     </div>
     <div class="card-meta">
-      <span class="acordo-num">Acordo #12984</span>
+      <span class="acordo-num">Acordo #11815</span>
       <span class="resp-badge">GIULIA NUNES</span>
       <span class="expand-icon">▼</span>
     </div>
@@ -555,19 +555,19 @@
   <div class="card-body">
     <div class="parcelas-row">
       <span class="row-label">Parcelas</span>
-      <div class="badges-wrap"></div>
-      <span class="prog-label">0/0</span>
+      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 05/11/2025">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 05/12/2025">2</span></div>
+      <span class="prog-label">2/2</span>
     </div>
-    <div class="progress-bar"><div class="progress-fill prog-low" style="width:0%"></div></div>
+    <div class="progress-bar"><div class="progress-fill prog-done" style="width:100%"></div></div>
     <div class="boletos-row">
       <span class="row-label">Boletos abertos</span>
       <div class="boletos-wrap"><span class="boleto-none">Sem boletos em aberto</span></div>
     </div>
   </div>
   <div class="card-footer">
-    <span>Total acordo: <strong>—</strong></span>
-    <span>Valor/parcela: <strong>—</strong></span>
-    <span>Período: — a —</span>
+    <span>Total acordo: <strong>R$ 2.983,60</strong></span>
+    <span>Valor/parcela: <strong>R$ 1.491,80</strong></span>
+    <span>Período: 05/11/2025 a 05/12/2025</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
   <div class="card-analytics">
@@ -576,17 +576,17 @@
     <div class="analytics-col">
       <div class="analytics-title">Resumo Financeiro</div>
       <div class="fin-grid">
-        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">—</span></div>
-        <div class="fin-item"><span class="fin-label">Pago (0 parcelas)</span><span class="fin-val green">R$ 0,00</span></div>
+        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">R$ 2.983,60</span></div>
+        <div class="fin-item"><span class="fin-label">Pago (2 parcelas)</span><span class="fin-val green">R$ 2.983,60</span></div>
         <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val green">R$ 0,00</span></div>
-        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">0%</span></div>
+        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">100%</span></div>
       </div>
     </div>
   </div>
-  <div class="analytics-title" style="margin-top:14px">Parcelas (0 registros)</div>
+  <div class="analytics-title" style="margin-top:14px">Parcelas (2 registros)</div>
   <table class="an-table">
     <thead><tr><th>Nº</th><th>Vencimento / Pagamento</th><th>Valor</th><th>Status</th></tr></thead>
-    <tbody></tbody>
+    <tbody><tr><td class="tc">#1</td><td>05/11/2025</td><td class="tr mono">R$ 1.317,97</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 05/11/2025</span></td></tr><tr><td class="tc">#2</td><td>05/12/2025</td><td class="tr mono">R$ 1.665,63</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 05/12/2025</span></td></tr></tbody>
   </table>
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
@@ -1840,7 +1840,7 @@ document.addEventListener('keydown', function(e) {
     <div class="extrato-header">
       <div>
         <h2>📋 Extrato de Alterações — CDMP</h2>
-        <span>128 boletos · 0 novo(s) · 0 recém pago(s) · últimos 30 dias</span>
+        <span>141 boletos · 2 novo(s) · 0 recém pago(s) · últimos 30 dias</span>
       </div>
       <button class="extrato-close" onclick="closeExtrato()">✕</button>
     </div>
